# game-engine-core

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Makefile  PRD.md  README.md  TASKS.md  go.mod
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
api/proto/: common.proto  gamesession.proto  matchmaking.proto
clients/python/: .gitignore  Makefile  README.md  pyproject.toml
clients/python/.githooks/: pre-commit
clients/python/examples/: random_agent.py
clients/python/game_engine_core/: __init__.py  actions.py  client.py  state.py  testing.py
clients/python/game_engine_core/proto/: __init__.py  common_pb2.py  gamesession_pb2.py  gamesession_pb2_grpc.py  matchmaking_pb2.py  matchmaking_pb2_grpc.py
clients/python/tests/: test_client.py
clients/python/tests/integration/: __init__.py  test_integration.py
clients/ts-node/: .gitignore  Makefile  README.md  biome.json  jest.config.ts  package-lock.json  package.json  tsconfig.json
clients/ts-node/.githooks/: pre-commit
clients/ts-node/examples/: randomAgent.ts
clients/ts-node/src/: actions.ts  client.test.ts  client.ts  index.ts  state.ts
clients/ts-node/src/integration/: client.integration.test.ts
clients/ts-node/src/proto/: gamesession.ts
clients/ts-node/src/testing/: server.ts
clients/ts-web/: .gitignore  Makefile  README.md  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json
clients/ts-web/.githooks/: pre-commit
clients/ts-web/docker/: envoy.yaml
clients/ts-web/examples/: randomAgent.ts  replayViewer.ts
clients/ts-web/src/: client.test.ts  client.ts  fetcher.test.ts  fetcher.ts  index.ts  observer.ts  replay.test.ts  replay.ts  state.ts
clients/ts-web/src/proto/: common.ts  gamesession.ts  matchmaking.ts
cmd/glogtool/: glogtool_test.go  main.go
cmd/server/: main.go
cmd/testserver/: main.go
examples/minimal_game/: main.go
internal/auth/: auth.go
internal/tls/: tls.go
pkg/components/cards/: cards.go  cards_test.go
pkg/components/grid/: grid.go  grid_test.go
pkg/components/timing/: timing.go  timing_test.go
pkg/engine/: dispatcher.go  dispatcher_test.go  game_logic.go  headless.go  live.go  noop_game.go  noop_game_test.go  replay_reader.go  replay_stub.go  replay_test.go  replay_types.go  replay_writer.go  runner.go  runner_integration_test.go  runner_test.go  session.go  session_test.go  types.go
pkg/transport/: client.go  server.go  transport_test.go
tools/: tools.go
