[project]
name = "game-engine-core"
version = "0.1.0"
description = "Python client SDK for game-engine-core gRPC services"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game_engine_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
